--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,8 @@ body *{
     border:2px solid lightcoral;
     padding: 5px;
     height:170px;
-    margin:5px
+    margin:5px;
+	background-color:white;
 }
 
 h1, h2, h3, h4, h5, h6, strong{
@@ -134,6 +135,8 @@ h6 { font-size: 16px;}
 	width: 1200px;
 	margin: 0 auto;
 }
+
+
 
 
 .greeting-wrapper{
@@ -446,6 +449,7 @@ h6 { font-size: 16px;}
 
 #about{
 	margin:20px;
+	background-color:white;
 	box-shadow: 0px 1px 35px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 0px 1px 35px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 1px 35px 0px rgba(0,0,0,0.75);
